--- a/CinemaBook/Scence/Home/view/cell/section4/BannerMovieTableViewCell.xib
+++ b/CinemaBook/Scence/Home/view/cell/section4/BannerMovieTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -91,13 +91,22 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y3d-Gh-PLn">
                                 <rect key="frame" x="0.0" y="0.0" width="159.5" height="20"/>
                                 <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phim đang chiếu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ncZ-mL-7Fd">
+                                        <rect key="frame" x="12.5" y="-0.5" width="135" height="21"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HAi-YZ-YJ7">
                                         <rect key="frame" x="0.0" y="0.0" width="159.5" height="20"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" title="Phim dang chieu">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Phim đang chiếu">
+                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="btn_choose_movie_new:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="kvN-Ki-bHO"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f6w-1Q-RB2">
                                         <rect key="frame" x="0.0" y="19" width="159.5" height="1"/>
@@ -110,32 +119,56 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="HAi-YZ-YJ7" secondAttribute="trailing" id="6Ld-cO-v3N"/>
+                                    <constraint firstItem="ncZ-mL-7Fd" firstAttribute="centerY" secondItem="y3d-Gh-PLn" secondAttribute="centerY" id="DuK-YT-ciL"/>
                                     <constraint firstAttribute="trailing" secondItem="f6w-1Q-RB2" secondAttribute="trailing" id="Jpb-Id-acF"/>
                                     <constraint firstAttribute="bottom" secondItem="f6w-1Q-RB2" secondAttribute="bottom" id="KsH-gs-wwN"/>
                                     <constraint firstItem="HAi-YZ-YJ7" firstAttribute="leading" secondItem="y3d-Gh-PLn" secondAttribute="leading" id="P87-bU-EdD"/>
                                     <constraint firstItem="HAi-YZ-YJ7" firstAttribute="top" secondItem="y3d-Gh-PLn" secondAttribute="top" id="bke-XH-vyD"/>
                                     <constraint firstAttribute="bottom" secondItem="HAi-YZ-YJ7" secondAttribute="bottom" id="iOr-O4-bT2"/>
+                                    <constraint firstItem="ncZ-mL-7Fd" firstAttribute="centerX" secondItem="y3d-Gh-PLn" secondAttribute="centerX" id="jfK-gN-rq5"/>
                                     <constraint firstItem="f6w-1Q-RB2" firstAttribute="leading" secondItem="y3d-Gh-PLn" secondAttribute="leading" id="oDX-rB-WhI"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FdU-Ze-nNV">
                                 <rect key="frame" x="160.5" y="0.0" width="159.5" height="20"/>
                                 <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phim sắp chiếu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RL6-17-Bjc">
+                                        <rect key="frame" x="18.5" y="-0.5" width="123" height="21"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mqZ-FX-BVF">
                                         <rect key="frame" x="0.0" y="0.0" width="159.5" height="20"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <state key="normal" title="Phim sap chieu">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="btn_choose_movie_newcoming:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="6Oz-aO-IXR"/>
+                                        </connections>
                                     </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Y5-gZ-dLQ">
+                                        <rect key="frame" x="0.0" y="19" width="159.5" height="1"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="ePG-O7-8JH"/>
+                                            <constraint firstAttribute="height" constant="1" id="jgS-v5-Z5J"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="mqZ-FX-BVF" secondAttribute="bottom" id="BIL-oo-J9k"/>
                                     <constraint firstItem="mqZ-FX-BVF" firstAttribute="top" secondItem="FdU-Ze-nNV" secondAttribute="top" id="Ggh-Eh-rmM"/>
+                                    <constraint firstItem="RL6-17-Bjc" firstAttribute="centerX" secondItem="FdU-Ze-nNV" secondAttribute="centerX" id="MXC-1a-eB6"/>
+                                    <constraint firstItem="0Y5-gZ-dLQ" firstAttribute="leading" secondItem="FdU-Ze-nNV" secondAttribute="leading" id="T7C-6j-Z76"/>
+                                    <constraint firstAttribute="trailing" secondItem="0Y5-gZ-dLQ" secondAttribute="trailing" id="XGT-jc-ivi"/>
                                     <constraint firstAttribute="trailing" secondItem="mqZ-FX-BVF" secondAttribute="trailing" id="j2X-Y2-NT3"/>
+                                    <constraint firstItem="RL6-17-Bjc" firstAttribute="centerY" secondItem="FdU-Ze-nNV" secondAttribute="centerY" id="tLH-z2-SKf"/>
                                     <constraint firstItem="mqZ-FX-BVF" firstAttribute="leading" secondItem="FdU-Ze-nNV" secondAttribute="leading" id="v7s-8f-SMl"/>
+                                    <constraint firstAttribute="bottom" secondItem="0Y5-gZ-dLQ" secondAttribute="bottom" id="vPV-jL-W2h"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -161,16 +194,20 @@
             <connections>
                 <outlet property="collection_view" destination="upM-Fv-ApC" id="Roi-rD-TpY"/>
                 <outlet property="lbl_name_movie" destination="qsi-eJ-31l" id="E7x-c0-sHa"/>
+                <outlet property="lbl_tittle_movie_comingsoon" destination="RL6-17-Bjc" id="Fyk-zh-ce5"/>
+                <outlet property="lbl_tittle_movienow" destination="ncZ-mL-7Fd" id="2au-kM-Qa9"/>
+                <outlet property="view_movieticket" destination="f6w-1Q-RB2" id="4WO-Rr-JLX"/>
+                <outlet property="view_newcomingsoon" destination="0Y5-gZ-dLQ" id="Djf-8d-Trx"/>
             </connections>
             <point key="canvasLocation" x="118.84057971014494" y="83.705357142857139"/>
         </tableViewCell>
     </objects>
     <resources>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
