--- a/CinemaBook/Scence/Manager/Management/ManagementInterestMovie/ManagementInterestMovieNewEdit/view/ManagementInterestMoviesViewController.xib
+++ b/CinemaBook/Scence/Manager/Management/ManagementInterestMovie/ManagementInterestMovieNewEdit/view/ManagementInterestMoviesViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -17,9 +17,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ManagementInterestMoviesViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
-                <outlet property="btn_dropdown" destination="iUw-tB-lvd" id="Ssn-gz-BaJ"/>
                 <outlet property="calender" destination="Lxl-hW-OVQ" id="QEs-yo-EdT"/>
-                <outlet property="dropdown" destination="YQS-IX-HxK" id="hXM-Wq-3PN"/>
+                <outlet property="collection_view_room" destination="Vpv-io-pNx" id="0n1-A2-ds6"/>
                 <outlet property="height_view_success" destination="dwc-mg-wbZ" id="HhN-py-Gxs"/>
                 <outlet property="lbl_datetime" destination="elL-H6-TTh" id="jxI-5g-Rix"/>
                 <outlet property="lbl_number" destination="PS3-9H-I6d" id="fKp-bC-3J2"/>
@@ -180,57 +179,24 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qo6-nm-QZq">
                             <rect key="frame" x="0.0" y="41" width="393" height="40"/>
                             <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ac9-VT-daY">
-                                    <rect key="frame" x="20" y="5" width="353" height="30"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="see_more" translatesAutoresizingMaskIntoConstraints="NO" id="TF1-Dl-7Pr">
-                                            <rect key="frame" x="311" y="4" width="22" height="22"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="22" id="7zE-Pl-Gel"/>
-                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="22" id="Z2o-Kb-Ryr"/>
-                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="22" id="b9k-HH-6HO"/>
-                                                <constraint firstAttribute="width" constant="22" id="eOa-re-uG6"/>
-                                            </constraints>
-                                        </imageView>
-                                        <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Vui lòng chọn rạp" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YQS-IX-HxK" customClass="JRDropDown">
-                                            <rect key="frame" x="0.0" y="0.0" width="353" height="30"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits"/>
-                                        </textField>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iUw-tB-lvd">
-                                            <rect key="frame" x="0.0" y="0.0" width="353" height="30"/>
-                                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <state key="normal" title="Button"/>
-                                            <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                                        </button>
-                                    </subviews>
-                                    <color key="backgroundColor" systemColor="systemGray6Color"/>
-                                    <constraints>
-                                        <constraint firstItem="TF1-Dl-7Pr" firstAttribute="centerY" secondItem="ac9-VT-daY" secondAttribute="centerY" id="4Tc-Vw-cdB"/>
-                                        <constraint firstAttribute="trailing" secondItem="TF1-Dl-7Pr" secondAttribute="trailing" constant="20" id="5qg-Ub-3ne"/>
-                                        <constraint firstItem="iUw-tB-lvd" firstAttribute="leading" secondItem="ac9-VT-daY" secondAttribute="leading" id="BjU-dM-snf"/>
-                                        <constraint firstAttribute="bottom" secondItem="iUw-tB-lvd" secondAttribute="bottom" id="N1B-er-Dlp"/>
-                                        <constraint firstAttribute="trailing" secondItem="YQS-IX-HxK" secondAttribute="trailing" id="PR1-n0-fJT"/>
-                                        <constraint firstItem="YQS-IX-HxK" firstAttribute="top" secondItem="ac9-VT-daY" secondAttribute="top" id="X9Q-Td-6Xz"/>
-                                        <constraint firstItem="iUw-tB-lvd" firstAttribute="top" secondItem="ac9-VT-daY" secondAttribute="top" id="gmu-qg-YC0"/>
-                                        <constraint firstAttribute="trailing" secondItem="iUw-tB-lvd" secondAttribute="trailing" id="iQG-rm-tzB"/>
-                                        <constraint firstItem="YQS-IX-HxK" firstAttribute="leading" secondItem="ac9-VT-daY" secondAttribute="leading" id="j5h-wS-wOs"/>
-                                        <constraint firstAttribute="bottom" secondItem="YQS-IX-HxK" secondAttribute="bottom" id="mM3-0b-OPq"/>
-                                    </constraints>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                            <real key="value" value="10"/>
-                                        </userDefinedRuntimeAttribute>
-                                    </userDefinedRuntimeAttributes>
-                                </view>
+                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Vpv-io-pNx">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="40"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NYB-gO-PaK">
+                                        <size key="itemSize" width="128" height="128"/>
+                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </collectionViewFlowLayout>
+                                </collectionView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
-                                <constraint firstAttribute="bottom" secondItem="ac9-VT-daY" secondAttribute="bottom" constant="5" id="Gxm-KL-XG8"/>
-                                <constraint firstAttribute="trailing" secondItem="ac9-VT-daY" secondAttribute="trailing" constant="20" id="Upl-BA-ov6"/>
+                                <constraint firstAttribute="trailing" secondItem="Vpv-io-pNx" secondAttribute="trailing" id="Eul-i0-lfP"/>
+                                <constraint firstAttribute="bottom" secondItem="Vpv-io-pNx" secondAttribute="bottom" id="LTy-VZ-erA"/>
                                 <constraint firstAttribute="height" constant="40" id="bmE-9f-5Ay"/>
-                                <constraint firstItem="ac9-VT-daY" firstAttribute="leading" secondItem="Qo6-nm-QZq" secondAttribute="leading" constant="20" id="rDb-Gj-cGM"/>
-                                <constraint firstItem="ac9-VT-daY" firstAttribute="top" secondItem="Qo6-nm-QZq" secondAttribute="top" constant="5" id="yK2-MO-j5v"/>
+                                <constraint firstItem="Vpv-io-pNx" firstAttribute="leading" secondItem="Qo6-nm-QZq" secondAttribute="leading" id="nhf-bk-14L"/>
+                                <constraint firstItem="Vpv-io-pNx" firstAttribute="top" secondItem="Qo6-nm-QZq" secondAttribute="top" id="wPj-ae-Wf0"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tmh-6n-Qkq">
@@ -395,16 +361,10 @@
             <point key="canvasLocation" x="32.824427480916029" y="-11.267605633802818"/>
         </view>
     </objects>
-    <designables>
-        <designable name="YQS-IX-HxK">
-            <size key="intrinsicContentSize" width="113" height="18.666666666666668"/>
-        </designable>
-    </designables>
     <resources>
         <image name="icon-back-blue" width="8.6666669845581055" height="17.333333969116211"/>
         <image name="icon_scale" width="42.666667938232422" height="42.666667938232422"/>
         <image name="img-no-data" width="220" height="170"/>
-        <image name="see_more" width="18" height="18"/>
         <namedColor name="outgoingMessageBackground">
             <color red="0.20399998128414154" green="0.77999997138977051" blue="0.34899997711181641" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -412,28 +372,28 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray3Color">
-            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
